# ESP-Carillonneur

./: .gitignore  README.md
ESP32 Bells/: platformio.ini
ESP32 Bells/src/: bells.h  main.cpp
Electrical CAD/: Bells AUS-200.kicad_prl  Bells AUS-200.kicad_pro  Bells AUS-200.kicad_sch
Electrical CAD/AUS-200 Mainboard/: AUS-200 Mainboard.kicad_prl  AUS-200 Mainboard.kicad_pro  AUS-200 Mainboard.kicad_sch
Electrical CAD/ESP Carillonneur/: ESP Carillonneur.csv  ESP Carillonneur.kicad_pcb  ESP Carillonneur.kicad_prl  ESP Carillonneur.kicad_pro  ESP Carillonneur.kicad_sch  ESP Carillonneur.kicad_sch-bak  ESP Carillonneur.step  ESP Carillonneur.xml  fp-info-cache  ibom.config.ini
Electrical CAD/ESP Carillonneur/Footprints.pretty/: EEC12DRAN.kicad_mod
Electrical CAD/ESP Carillonneur/bom/: ibom.html
Mechanical CAD/: EEC12DRAN.ipt  ESP Carilloneur.ipj  case.mtl  case.stl  case.stp  rp-sma_nut.ipt  rp-sma_pigtail.ipt  rp-sma_washer.ipt
Mechanical CAD/AUS-200/: aus-200_bottom.ipt  aus-200_top.ipt  sliding_door.ipt
Mechanical CAD/DM3AT-SF-PEJM5/: DM3AT-SF-PEJM5.ipt
Mechanical CAD/ESP Carillonneur/: ESP Carillonneur.iam
Mechanical CAD/EVQPU-LC-02K/: EVQPU-LC-02K.ipt
python-trigger/: browser.py  pyproject.toml
python-trigger/pytrigger/: __init__.py  finder.py
